--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/hammerjs": "^2.0.40",
     "@vueuse/core": "^6.8.0",
+    "element-plus": "^1.2.0-beta.3",
     "vue": "^3.2.21",
     "vue-demi": "^0.12.1",
     "vue-router": "^4.0.12"
