--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/hammerjs": "^2.0.40",
     "@vueuse/core": "^6.8.0",
     "element-plus": "^1.2.0-beta.3",
+    "pinia": "^2.0.11",
     "vue": "^3.2.21",
     "vue-demi": "^0.12.1",
     "vue-router": "^4.0.12"
@@ -23,6 +24,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.2.0",
     "pnpm": "^6.20.4",
+    "prettier": "^2.5.1",
     "typescript": "^4.4.4",
     "unocss": "^0.7.2",
     "unplugin-auto-import": "^0.4.13",
